@@ -2,6 +2,8 @@
 v6.0-git
 --------
 
+[mms] Replying to a multipart/related message in HTML mode now correctly
+      attaches data from the original message.
 [mms] Allow deletion of all subfolders at once in dynamic view.
 [mms] Provide details of when search results were last refreshed.
 [mms] Dynamically update unseen message counts in folder list in smartmobile
